--- a/app3/styles.css
+++ b/app3/styles.css
@@ -1,6 +1,10 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 24px;
+	background-image: url(../assets/bg.png);
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover; /* Resize the background image to cover the entire container */
 }
 body#taxon{
 	text-align: center;
