--- a/app3/styles.css
+++ b/app3/styles.css
@@ -1,16 +1,25 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 24px;
+	font-size: 20px;
 	background-image: url(../assets/bg.png);
 	background-position: center; /* Center the image */
 	background-repeat: no-repeat; /* Do not repeat the image */
+  	background-attachment: fixed;
 	background-size: cover; /* Resize the background image to cover the entire container */
 }
 body#taxon{
 	text-align: center;
 }
 h1{
-	margin-top: 60px;
+	margin-top: 40px;
+}
+.menu{
+	position: absolute;
+	z-index: 1000;
+	left: 0px;
+	top: 0px;
+	background-color: #000;
+	font-size: 16px;
 }
 a{
 	color: #dc73d6;
@@ -37,6 +46,28 @@ a{
 	text-align: center;
 	padding-top: 50px;
 
+}
+.quotecircle{
+	background-color: #a984aa;
+	color: #fff;
+	font-family: 'Times New Roman', serif;
+	font-weight: bold;
+	font-size: 20px;
+	position: absolute;
+	right: 250px;
+	bottom: -200px;
+	width: 500px;
+	height: 450px;
+	border-radius: 50%;
+	text-align: center;
+	padding-top: 50px;
+
+}
+p.quote{
+	padding: 50px 50px 10px 50px;
+}
+p.krant a{
+	color: #fff;
 }
 .imgcircleholder{
 	display: inline-block;
