--- a/app3/styles.css
+++ b/app3/styles.css
@@ -11,7 +11,8 @@ body#taxon{
 	text-align: center;
 }
 h1{
-	margin-top: 40px;
+	margin-top: 4px;
+	margin-bottom: 1px;
 }
 .menu{
 	position: absolute;
@@ -41,10 +42,10 @@ a{
 	left: 30px;
 	top: -30px;
 	width: 400px;
-	height: 350px;
+	height: 340px;
 	border-radius: 50%;
 	text-align: center;
-	padding-top: 50px;
+	padding-top: 60px;
 
 }
 .quotecircle{
