--- a/app2/soorten/styles.css
+++ b/app2/soorten/styles.css
@@ -50,6 +50,7 @@ a{
 	height: 100%;
 	background-color:#ffc6ff;
 	border-radius: 50%;
+	border: 10px solid dodgerblue;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
@@ -60,6 +61,9 @@ a{
 }
 .nozeman {
 	border: 10px solid dodgerblue;
+}
+.dijkshoorn {
+	border: 10px solid darkred;
 }
 .content{
 	position: absolute;
