--- a/app2/soorten/styles.css
+++ b/app2/soorten/styles.css
@@ -1,7 +1,7 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 24px;
-	background-image: url(../assets/bg.png);
+	background-image: url(../../assets/bg.png);
 	background-position: center; /* Center the image */
 	background-repeat: no-repeat; /* Do not repeat the image */
 	background-size: cover; /* Resize the background image to cover the entire container */
