Really add colors

--- a/app2/soorten/styles.css
+++ b/app2/soorten/styles.css
@@ -60,7 +60,7 @@ a{
 	border: 10px solid #68d5ef;
 }
 .nozeman {
-	border: 10px solid #ffc6ff;
+	border: 10px solid #dc73d6;
 }
 .dijkshoorn {
 	border: 10px solid #ff7589;
